[gd_scene load_steps=6 format=3 uid="uid://75ohsv3f0df6"]

[ext_resource type="Theme" uid="uid://g8quu7iaq3qw" path="res://addons/limbo_console/res/settings_theme.tres" id="1_sl1te"]
[ext_resource type="Script" uid="uid://beykxksvgr5am" path="res://scenes/ui/main_menu.gd" id="2_1g8jr"]
[ext_resource type="Texture2D" uid="uid://diwkslbugmxum" path="res://assets/Love Deluxe Sticker.png" id="2_fe2o3"]
[ext_resource type="PackedScene" uid="uid://bfqb614bysg2o" path="res://scenes/level_test.tscn" id="3_m1kxf"]
[ext_resource type="PackedScene" uid="uid://cs1auqp2g4yn4" path="res://ui/menus/layouts/settings/tabs/settings_menu.tscn" id="5_x2yvf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_sl1te")
script = ExtResource("2_1g8jr")
initial_game_scene = ExtResource("3_m1kxf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.713726, 0.839216, 0.862745, 1)

[node name="TextureRect" type="TextureRect" parent="."]
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_fe2o3")
expand_mode = 5
stretch_mode = 4

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 2
offset_left = 50.0
offset_top = 48.0
offset_right = 206.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "Love Deluxe"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 145
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = -30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "New Game"

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Continue"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Quit"

[node name="GameSettingsUI" parent="." instance=ExtResource("5_x2yvf")]
visible = false
layout_mode = 1
